--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # PyTorch (with CUDA 11.0 support)
-torch==1.7.1+cu110 torchvision==0.8.2+cu110 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
+# torch==1.7.1+cu110 torchvision==0.8.2+cu110 torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
 
 # Scientific computing libraries
 numpy==1.22.3
